--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Examen2</title>
+  <title>pokepage</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="./assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
   <app-root></app-root>
